@@ -1,3 +1,11 @@
+2006-03-17  Wouter Bolsterlee  <uws@xs4all.nl>
+
+	* src/ephy-tab.c: (ephy_tab_file_monitor_cb),
+	(ephy_tab_update_file_monitor):
+
+	Add support for local directory monitoring (in addition to
+	local file monitoring). Bug #332049.
+
 2006-03-13  Christian Persch  <chpe@cvs.gnome.org>
 
 	* data/chrome/brand.dtd.in:
